# r2-deleter

./: Cargo.toml
