[package]
name = "r2-deleter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.6"
aws-sdk-s3 = "1.16.0"
futures = "0.3.30"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
